lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rishabh-app-day5
  name: rishabh-internal-lb
  namespace: rishabh-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rishabh-app-day5
status:
  loadBalancer: {}
