ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rishabh-app-route
  namespace: rishabh-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host : rishabh.ashutoshh.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rishabh-internal-lb
            port:
              number: 80
